possible fix for symbols on small screens

--- a/docs/style.css
+++ b/docs/style.css
@@ -69,7 +69,7 @@ p{
     color: black;
     text-align: center;
     font-size: 40px;
-    padding: 90px 0;
+    padding: 80px 0;
 }
 
 .buttons {
@@ -135,7 +135,9 @@ button {
         padding: 1%;
         text-align: center;
     }
-    
+    .flash {
+        padding: 30px 0;
+    }
 }
 
 @media screen and (min-width: 1000px) {
